htmx, post method

--- a/fastapi/static/css/style.css
+++ b/fastapi/static/css/style.css
@@ -1,1 +1,5 @@
-/* init */
+/* Tailwind */
+/* static/css/styles.css */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
