--- a/fastapi_app/templates/login-tg.html
+++ b/fastapi_app/templates/login-tg.html
@@ -2,9 +2,9 @@
 
 {% extends "base.html" %}
 
-{% block title %}Home - My Website{% endblock %}
+{% block title %}Dashboard - Login-tg{% endblock %}
 
-{% block header %}Login-tg{% endblock %}
+{% block header %}Dashboard - Login-tg{% endblock %}
 
 {% block content %}
 <div id="initDataDisplay"></div>
