--- a/fastapi_app/templates/base.html
+++ b/fastapi_app/templates/base.html
@@ -10,12 +10,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-400">
-<div class="justify-center">
+<div class="">
+    {% include "menu-top.html" %}
 
     <div>
         <a class="text-blue-500 p-10 m-5" href="/">Home</a>
     </div>
-    <h1 class="font-extrabold">{% block header %}My Website Header{% endblock %}</h1>
+    <h1 class="font-extrabold">{% block header %}{% endblock %}</h1>
 </div>
 
 {% block content %}{% endblock %}
