--- a/fastapi_app/templates/login.html
+++ b/fastapi_app/templates/login.html
@@ -2,9 +2,9 @@
 
 {% extends "base.html" %}
 
-{% block title %}Home - My Website{% endblock %}
+{% block title %}Dashboard - Login{% endblock %}
 
-{% block header %}Login{% endblock %}
+{% block header %}Dashboard - Login{% endblock %}
 
 {% block content %}
 <!--<div id="initDataDisplay"></div>-->
