--- a/fastapi_app/templates/base.html
+++ b/fastapi_app/templates/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}My Website{% endblock %}</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
 </head>
 <body class="bg-slate-400">
 <div class="">
