--- a/fastapi_app/templates/menu-top.html
+++ b/fastapi_app/templates/menu-top.html
@@ -7,7 +7,7 @@
       <a href="/login" class="hover:text-gray-300 hover:underline">Login</a>
     </li>
     <li class="mb-2 md:mb-0">
-      <a href="/login-tg" class="hover:text-gray-300 hover:underline"
+      <a href="/login/tg" class="hover:text-gray-300 hover:underline"
         >Login-tg</a
       >
     </li>
